cmake_minimum_required(VERSION 3.22 FATAL_ERROR)

project("test-cpp")

add_executable(${PROJECT_NAME}
	"src/main.cpp"
)

set(OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin/$<0:>")

set_target_properties(${PROJECT_NAME} PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY}
	LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY}
	ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY}
)
